Add back call blacklist backend.
Change-Id: I065f1c206cbb86b790e698b396cc611c9a434279

Move message blacklist to framework (2/3).

Change-Id: Ie1bea95513b985e79da2e28c86b15a2042c98754

Telephony: add blacklist call logging (2/3)

Change-Id: Iab90d4d933902f992e59fe450f7bf45de6e94a89
Signed-off-by: Roman Birg <roman@cyngn.com>

Telephony: fix Blacklist support for L (2/3)

Change-Id: I9cd9c7007fc1016bf2872b01b18334bd8c2601ba
Signed-off-by: Roman Birg <roman@cyngn.com>

Telecom : Rename blacklist

Change-Id: Ieaa215fce53ad91785173580839bf40654e62433
(cherry picked from commit 108d59e506ecda85795e6a7895aa095e2c550c68)

telephony: Clean up dead code

Change-Id: Icbefce4ce76fe83076ba5328cac04958892daec3
Signed-off-by: Chet Kener <Cl3Kener@gmail.com>

Conflicts:
	res/xml/call_feature_setting.xml
	src/com/android/phone/CallFeaturesSetting.java
	src/com/android/phone/CallNotifier.java
	src/com/android/phone/PhoneGlobals.java

Conflicts:
	res/values/cm_strings.xml
	src/com/android/phone/CallNotifier.java

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -43,6 +43,7 @@
     <string name="incall_screen_settings">In-call screen settings</string>
     <string name="show_ssn_label">Event notification</string>
     <string name="show_ssn_summary">Show a notification for various network events related to call handling</string>
+    <string name="advanced_setting">Advanced Settings</string>
 
     <!-- Blacklist preferences -->
     <string name="blacklist_title">Blocked caller list</string>
@@ -83,4 +84,5 @@
     <string name="call_notif_callconnectingect">Call connecting through explicit call transfer</string>
     <!-- Toast text for incoming call connected through ECT -->
     <string name="call_notif_callconnectedect">Call connected through explicit call transfer</string>
+
 </resources>
