--- a/res/xml/call_feature_setting.xml
+++ b/res/xml/call_feature_setting.xml
@@ -71,6 +71,15 @@
         android:persistent="false" />
 
     <PreferenceScreen
+         android:key="button_blacklist"
+         android:title="@string/blacklist_title"
+         android:persistent="false">
+         <intent android:action="android.intent.action.MAIN"
+             android:targetPackage="com.android.settings"
+             android:targetClass="com.android.settings.Settings$BlacklistSettingsActivity" />
+    </PreferenceScreen>
+
+    <PreferenceScreen
         android:key="ims_settings_key"
         android:title="@string/ims_settings"
         android:persistent="false">
